# cgnr-distributed-reconstruction

./: .gitignore  README.md  docker-compose.yml
client/: Dockerfile  README.md  client.py  saturation_test.py
cpp_server/: CMakeLists.txt  Dockerfile  README.md  blas_tests.cpp  cgnr.cpp  cgnr.hpp  main.cpp
data/: README.md
data/smoke/: G-smoke-30.csv
docs/: ai-context.md  decisions.md  next-step.md  session-log.md
docs/superpowers/plans/: 2026-06-11-cgnr-distributed-reconstruction.md
python_server/: Dockerfile  README.md  blas_tests.py  cgnr.py  image_utils.py  requirements.txt  server.py
reports/: generate_report.py  problem_text_extract.txt  report.md
results/: cpp_cgnr_1781749354619.csv  cpp_cgnr_1781749354619_metadata.json  cpp_cgnr_1781749739799.csv  cpp_cgnr_1781749739799_metadata.json  cpp_cgnr_1781749780800.csv  cpp_cgnr_1781749780800_metadata.json  cpp_extra_signals_summary.json  python_cgnr_A-60x60-image3_20260618T022737974569Z.csv  python_cgnr_A-60x60-image3_20260618T022737974569Z_metadata.json  python_cgnr_G-1_20260618T022100124238Z.csv  python_cgnr_G-1_20260618T022100124238Z_metadata.json  python_cgnr_G-2-image2_20260618T022724708651Z.csv  python_cgnr_G-2-image2_20260618T022724708651Z_metadata.json  python_extra_signals_summary.json  real_reconstruction_comparison_summary.json  three_images_reconstruction_summary.json
scripts/: generate_report.sh  run_all_tests.sh  run_cpp.sh  run_gabarito_focus.py  run_python.sh
